# gi

./: .gitignore
a01/analysis/: comparaison_samplers
a01/src/: CMakeLists.txt
a01/src/algorithms/: bidirectional.cpp  brdf_imp.cpp  direct.cpp  manylights.cpp  naive_pathtracer.cpp  pathtracer.cpp  photon_map.h  photonmapping.cpp  simple.cpp
a01/src/driver/: context.cpp  context.h  main.cpp  quad.h  render.cpp  render.h
a01/src/gi/: algorithm.h  bdpt.cpp  bdpt.h  brdf.cpp  brdf.h  buffer.h  camera.cpp  camera.h  color.h  distribution.cpp  distribution.h  framebuffer.cpp  framebuffer.h  fresnel.h  json11.cpp  json11.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  random.h  ray.h  rng.h  sampling.h  scene.cpp  scene.h  surface.cpp  surface.h  texture.cpp  texture.h  timer.cpp  timer.h
